# router.js
@@ -48,7 +48,7 @@ function setup(app){
         .post(userController.create)
         .get(userController.getAllUsers);
 
-    app.get('/api/login/:username', userController.login);
+    app.post('/api/login', userController.login);
 
     app.route('/api/crowds')
         .post( crowdController.create)
